syntax = "proto3";
option go_package = "github.com/sujayhub/go-gRPC-app/modules/movie";
option java_multiple_files = true;
option java_package = "io.grpc.app.moviesapp";
option java_outer_classname = "MoviesAppProto";
option objc_class_prefix = "MAP";

package moviesApp;

service Movie {
  rpc CreateMovie (MovieInfo) returns (Id);
  rpc GetMovie (Id) returns (MovieInfo);
  rpc GetMovies (Empty) returns (stream MovieInfo);
  rpc UpdateMovie (MovieInfo) returns (Status);
  rpc DeleteMovie (Id) returns (Status);
}


message  Empty {}

message MovieInfo {
  string id = 1;
  string title = 2;
  Director director = 3;
  float imdb = 4;
}

message Director {
  string firstName = 1;
  string lastName = 2;
}

message Id {
  string value = 1;
}

message Status {
  int32 value = 1;
}

